--- a/ssl/srv_rotterdam.config
+++ b/ssl/srv_rotterdam.config
@@ -1,6 +1,6 @@
 #!/bin/bash
 ##############################################################
-# Last update: 21-OKT-2017
+# Last update: 06-SEP-2018
 ##############################################################
 
 # CN
@@ -23,17 +23,3 @@ ORGANISATION_CITY="Rotterdam"
 
 # certificate value: ST
 ORGANISATION_STREET="Blaak 45679"
-
-#subjROOTCA="/CN=My Self Signed Certficate/C=NL/ST=Nederland/O=MyOrg/OU=Certificate Authority Factory"
-
-#CERT_DIR_SERVERS=server_certs
-
-#SERVER=example.com
-
-# Alice Ltd Root
-#subjROOTCA="/CN=Alice Ltd Root CA/C=GB/ST=England";
-#subjROOTCA+="/O=Alice Ltd/OU=Alice Ltd Certificate Authority"
-
-# Alice Ltd Intermediate
-#subjINTERMEDIATE="/CN=Alice Ltd Intermediate CA/C=GB/ST=England"
-#subjINTERMEDIATE+="/O=Alice Ltd/OU=Alice Ltd Certificate Authority"
