--- a/ssl/email_rob@srv_rotterdam01.local.config
+++ b/ssl/email_rob@srv_rotterdam01.local.config
@@ -3,19 +3,21 @@
 # Last update: 08-SEP-2018
 ##############################################################
 
-# CN
-SERVER_COMMON_NAME=srv_rotterdam01.local
+# Username WITHOUT domain. Like john.doe or jdoe.
+EMAIL_USER_NAME=rob
 
-EMAIL=rob@${SERVER_COMMON_NAME}
+SURNAME=Lassche
+
+GIVEN_NAME=Rob
 
 # certificate value: C
 #SERVER_COUNTRY_CODE="NL"
 
 # certificate value: O
-#ORGANISATION="The OS Company"
+ORGANISATION="Rotterdam Office"
 
 # certificate value: OU
-#ORGANISATION_UNIT="Rotterdam Office"
+ORGANISATION_UNIT="Development"
 
 # certificate value: S
 #ORGANISATION_STATE_OR_PROVINCE="ZH"
